2012-02-18 [mborik] major bugfixes in Settings class and finalized saving of settings (autosave too :)
2012-02-11 [mborik] fixed TapeBrowser bug if tape file from configuration not exists
2012-02-05 [mborik] implemented file import to TapeBrowser and extended dialog with hex/dec shortcut
2012-02-04 [mborik] RGBA mask workaround added to screen surface creation for big endian compatibility
2012-02-02 [mborik] separation of GUI vs. Core code; GUI code separated to logical sections; implemented move of tape block or selection
2012-02-01 [mborik] implemented "pause on lost focus"; added "autosave settings" to menu; fixed callbacks of TapeBrowser popup items
2012-01-31 [mborik] externed GUI, Settings and TapeBrowser to make it global accessible
2012-01-27 [mborik] implemented methods for checking selection continuity and deleting selection to TapeBrowser
2012-01-23 [mborik] completely Valgrinated project, solved all memleaks and other bugs; implemented tape block selection with insert key
2012-01-22 [mborik] configuration file changed to plain text .conf file, libXML2 not yet required!
2012-01-06 [mborik] early implementation of context popup menu for block operations in TapeBrowser (not functional yet :)
2012-01-05 [mborik] other fixes and optimalizations in TapeBrowser
2012-01-04 [mborik] fully functional saving to tape, new menu item "New tape", prepared dialogues "Save changes?" for unsaved changes
2012-01-03 [mborik] fixed segfaults while freeing fileSelector memcache and disabled recacheing while changing checkboxes in fileSelector and TapeBrowser
2012-01-02 [mborik] finished prenatal version of TapeBrowser, added tape activity progress to statusbar
2012-01-01 [mborik] fully functional tape emulation, added current model acronym and tape activity icon to status bar
2011-12-30 [mborik] fixed extended 384px width screen mode for Consul 2717 (and clean-up of trivial inline functions in SystemPIO)